--- a/homepage/assets/css/style.css
+++ b/homepage/assets/css/style.css
@@ -138,7 +138,7 @@ nav.navbar.bootsnav ul.nav > li.dropdown span {
     -webkit-box-shadow: inset 0 0 8px #000;
 }
 .menu-ui-design::-webkit-scrollbar-thumb {
-  background-color: #d92cf9;
+  background-color: #9000a9;
 }
 /*.menu-ui-design*/
 
@@ -148,11 +148,11 @@ nav.navbar.bootsnav ul.nav > li.dropdown span {
 nav.navbar.bootsnav .navbar-toggle {
     position: relative;
     background-color: transparent;
-    border: 1px solid #d92cf9;
+    border: 1px solid #9000a9;
     padding: 10px;
     top: 0;
 }
-nav.navbar.bootsnav .navbar-toggle i{color: #d92cf9;}
+nav.navbar.bootsnav .navbar-toggle i{color: #9000a9;}
 /*.navbar-toggle */
 
 
@@ -168,7 +168,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #d92cf9;}
     background:url(../images/about/homepicture.jpg)no-repeat;
     background-size:cover;
     background-position: center;
-    height:700px;
+    height:680px;
 }
 .welcome-hero:before{
     position:absolute;
@@ -188,7 +188,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #d92cf9;}
     text-transform: uppercase;
     line-height: 1.5;
 }
-.header-text h2 span {color: #d92cf9;}
+.header-text h2 span {color: #9000a9;}
 .header-text p {
     color: #fff;
     font-size: 20px;
@@ -263,10 +263,10 @@ nav.navbar.bootsnav .navbar-toggle i{color: #d92cf9;}
     content: " ";
     width:100%;
     height: 100%;
-    background: #d92cf9;
-    background: -moz-linear-gradient(left, #d92cf9 0%, #b636ff 100%);
-    background: -webkit-linear-gradient(left, #d92cf9 0%,#b636ff 100%);
-    background: linear-gradient(to right, #d92cf9 0%,#b636ff 100%);
+    background: #9000a9;
+    background: -moz-linear-gradient(left, #9000a9 0%, #9000a9 100%);
+    background: -webkit-linear-gradient(left, #9000a9 0%,#9000a9 100%);
+    background: linear-gradient(to right, #9000a9 0%,#9000a9 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d92cf9', endColorstr='#b636ff',GradientType=1 );
     -webkit-transform:scale(0);
     -moz-transform:scale(0);
