--- a/homepage/assets/css/style2.css
+++ b/homepage/assets/css/style2.css
@@ -76,6 +76,8 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
 }
 
 #buttonBar div:hover{
@@ -101,12 +103,21 @@ body{
     flex-direction: column;
     box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.742);
 }
-.sideBtn{
+#sideBar div{
+    margin: 60px 0 0 0;
+}
+
+.sideLink{
     background-color: #201f1d;
-    text-align: center;
     height: 50px;
     padding: 5px;
     color: #fff;
+    display:flex;
+    align-items:center;
+    text-transform: capitalize;
+    justify-content:center;
+    flex-direction: column;
+    margin: 20px 0;
 }
 
 /*search Bar-------------*/
