--- a/homepage/assets/css/style2.css
+++ b/homepage/assets/css/style2.css
@@ -134,8 +134,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 80px 5px;
-    width: 100%;
+    height: 100%;
 }
 
 .search{
