--- a/homepage/assets/css/style2.css
+++ b/homepage/assets/css/style2.css
@@ -5,6 +5,8 @@ body{
 	background: #201f1d;
     max-width:1920px;
     margin:0 auto;
+    padding: 0;
+    width: 100%;
 	overflow-x:hidden;
 }
 
@@ -13,6 +15,7 @@ body{
     position: fixed;
     top:0;
     width: 100%;
+    z-index: 2;
 }
 
 #homeTitle{
@@ -48,12 +51,11 @@ body{
     display: flex;
     flex-wrap: wrap;
     background-color: #252423;
+    margin: 0 5px;
 }
 
 #buttonBar div{
-    height: 100px;
     width: 25%;
-    padding: 15px;
     -webkit-transition:background 0.5s linear; 
     -moz-transition:background 0.5s linear; 
     -ms-transition:background 0.5s linear; 
@@ -103,11 +105,13 @@ body{
     flex-direction: column;
     align-items:center;
     box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.742);
-    width: 100%;
+    position: fixed;
+    top: 50px;
+    width: 8vw;
+    height: 100%;
 }
 #sideBar div{
-    margin: 60px 0 0 0;
-    position: fixed;
+    margin: 10px 0;
 }
 
 .sideLink{
@@ -120,13 +124,13 @@ body{
     text-transform: capitalize;
     justify-content:center;
     flex-direction: column;
-    margin: 20px 0;
+    margin: 30px 0;
 }
 
 #settingBtn{
     position: fixed;
-    bottom: 0;
-    left: 23px;
+    bottom: 0px;
+    left: 28px;
 }
 
 /*search Bar-------------*/
@@ -134,16 +138,22 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    justify-content: space-between;
+    margin: 0 5px;
+}
+
+#searchBarDiv p{
+    font-size: large;
+    font-weight: 400;
+    color: #ffffffe6;
 }
 
 .search{
-    background-color: #edf4cf;
-    width: 33%;
-    height: 100%;
-    margin: 5px;
+    background-color: #252423;
     text-align: center;
-    padding: 15px;
+    height: 100%;
+    width: 33%;
+    padding: 0 20px;
 }
 
 .shortSearchBar{
@@ -152,7 +162,16 @@ body{
 }
 
 ::placeholder{
-    color: #37394c;
+    color: #7d809c;
     text-align: center;
+}
+
+/*calendar--------------*/
+#calender{
+    background-color: #252423;
+    margin: 0 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
