--- a/homepage/assets/css/indexgrid.css
+++ b/homepage/assets/css/indexgrid.css
@@ -5,7 +5,7 @@
     grid-template-areas: 
     "header header"
     "sidebar searchbar"
-    "sidebar calendar"
+    "sidebar calender"
     "sidebar buttonbar";
     grid-gap: 10px;
     grid-auto-rows: minmax(70px, auto);
@@ -24,8 +24,8 @@
     grid-area: searchbar;
 }
 
-#calendar{
-    grid-area: calendar;
+#calender {
+    grid-area: calender;
 }
 
 #buttonBar {
