--- a/homepage/assets/css/style.css
+++ b/homepage/assets/css/style.css
@@ -171,13 +171,203 @@ body{
     text-align: center;
 }
 
-/*calendar--------------*/
-#calender{
-    background-color: #252423;
+/*----calendar-----*/
+#calendar{
+    background-color:#201f1d;
     margin: 0 5px;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.calendarContent{
+    background-color:#252423;
+    margin: 0 5px;
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    height: 100%;
+}
+
+#today{
+    grid-column: 1;
+}
+
+/* calendarContent start */
+
+#mainCalendar{
+    display: grid;
+    grid-template-areas: 
+    "monthDispaly..backButton nextButton"
+    "sunday monday tuesday wednesay thursday friday saturday"
+    "day";
+}
+
+#mainCalendar button {
+    width: 30px;
+    cursor: pointer;
+    box-shadow: 0px 0px 2px gray;
+    border: none;
+    outline: none;
+    padding: 5px;
+    border-radius: 5px;
+    color: #fff;
+}
+
+.headerButton{
+    text-align: right;
+    font-size: 1.5vw;
+    background-color: #252423;
+}
+
+#monthDisplay{
+    grid-area: "monthDisplay";
+    height: 5vh;
+    background-color: #d36c6c;
+}
+
+#backButton{
+    grid-area: "backButton";
+}
+
+#nextButton{
+    grid-area: "nextButton";
+    grid-column: 3;
+}
+  
+#weekdays {
+    grid-row: 2;
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    height: 80%;
+    color: #fff;
+}
+
+#weekdays div {
+    width: 100px;
+    padding: 10px;
+}
+
+
+#sunday{
+    grid-area: "sunday";
+}    
+#monday{
+    grid-area: "monday";
+}    
+#tuesday{
+    grid-area: "tuesday";
+}    
+#wednesay{
+    grid-area: "wednesday";
+}    
+#thursday{
+    grid-area: "thursday";
+}    
+#friday{
+    grid-area: "friday";
+}    
+#saturday{
+    grid-area: "saturday";
+}
+
+
+.day {
+    grid-row: 3;
+    width: 50px;
+    padding: 10px;
+    height: 50px;
+    cursor: pointer;
+    box-sizing: border-box;
+    background-color: white;
+    margin: 5px;
+    box-shadow: 0px 0px 3px #CBD4C2;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.day:hover {
+    background-color: #e8faed;
+}
+  
+.day + #currentDay {
+    background-color:#e8f4fa;
+  }
+
+.event {
+    font-size: 10px;
+    padding: 3px;
+    background-color: #58bae4;
+    color: white;
+    border-radius: 5px;
+    max-height: 55px;
+    overflow: hidden;
+  }
+.padding {
+    cursor: default !important;
+    background-color: #FFFCFF !important;
+    box-shadow: none !important;
+}
+
+#newEventModal, #deleteEventModal {
+    display: none;
+    z-index: 20;
+    padding: 25px;
+    background-color: #e8f4fa;
+    box-shadow: 0px 0px 3px black;
+    border-radius: 5px;
+    width: 350px;
+    top: 100px;
+    left: calc(50% - 175px);
+    position: absolute;
+    font-family: sans-serif;
+}
+
+#eventTitleInput {
+    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    margin-bottom: 25px;
+    border-radius: 3px;
+    outline: none;
+    border: none;
+    box-shadow: 0px 0px 3px gray;
+}
+ 
+#eventTitleInput.error {
+    border: 2px solid red;
+}
+  
+#cancelButton, #deleteButton {
+    background-color: #d36c6c;
+}
+
+#saveButton, #closeButton {
+    background-color: #92a1d1;
+}
+
+#eventText {
+    font-size: 14px;
+}
+  
+#modalBackDrop {
+    display: none;
+    top: 0px;
+    left: 0px;
+    z-index: 10;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    background-color: rgba(0,0,0,0.8);
+}
+  
+  /* calendarContent end */
+
+#month{
+    grid-column: 3;
+    
 }
 
 /*logInBox---------------*/
