--- a/homepage/assets/css/style.css
+++ b/homepage/assets/css/style.css
@@ -194,83 +194,38 @@ body{
 
 /* calendarContent start */
 
-#mainCalendar{
+#mainCalendar {
     display: grid;
-    grid-template-areas: 
-    "monthDispaly..backButton nextButton"
-    "sunday monday tuesday wednesay thursday friday saturday"
-    "day";
-}
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
+    }
+    
+#monthDisplay{grid-area: 1 / 1 / 3 / 1;}
+#backButton{grid-area: 1 / 6 / 2 / 7;}
+#nextButton{grid-area: 1 / 7 / 2 / 8;}
+
+#sunday { grid-area: 2 / 1 / 3 / 2; }
+#monday { grid-area: 2 / 2 / 3 / 3; }
+#tuesday { grid-area: 2 / 3 / 3 / 4; }
+#wednesday { grid-area: 2 / 4 / 3 / 5; }
+#thursday { grid-area: 2 / 5 / 3 / 6; }
+#friday { grid-area: 2 / 6 / 3 / 7; }
+#saturday { grid-area: 2 / 7 / 3 / 8; }
+    
 
 #mainCalendar button {
-    width: 30px;
+    width: px;
     cursor: pointer;
     box-shadow: 0px 0px 2px gray;
     border: none;
     outline: none;
     padding: 5px;
     border-radius: 5px;
-    color: #fff;
-}
-
-.headerButton{
-    text-align: right;
-    font-size: 1.5vw;
+    color: #676a81;
     background-color: #252423;
 }
-
-#monthDisplay{
-    grid-area: "monthDisplay";
-    height: 5vh;
-    background-color: #d36c6c;
-}
-
-#backButton{
-    grid-area: "backButton";
-}
-
-#nextButton{
-    grid-area: "nextButton";
-    grid-column: 3;
-}
-  
-#weekdays {
-    grid-row: 2;
-    display: flex;
-    flex-direction: row;
-    width: 80%;
-    height: 80%;
-    color: #fff;
-}
-
-#weekdays div {
-    width: 100px;
-    padding: 10px;
-}
-
-
-#sunday{
-    grid-area: "sunday";
-}    
-#monday{
-    grid-area: "monday";
-}    
-#tuesday{
-    grid-area: "tuesday";
-}    
-#wednesay{
-    grid-area: "wednesday";
-}    
-#thursday{
-    grid-area: "thursday";
-}    
-#friday{
-    grid-area: "friday";
-}    
-#saturday{
-    grid-area: "saturday";
-}
-
 
 .day {
     grid-row: 3;
