--- a/homepage/assets/css/style.css
+++ b/homepage/assets/css/style.css
@@ -122,21 +122,31 @@ body{
 .sideLink{
     background-color: #201f1d;
     height: 50px;
-    padding: 5px;
+    padding: 10px;
+    box-sizing:content-box;
     color: #fff;
     display:flex;
     align-items:center;
     text-transform: capitalize;
     justify-content:center;
     flex-direction: column;
-    margin: 30px 0;
+    margin: 30px 0px;
+
 }
 
-#settingBtn{
-    position: fixed;
-    bottom: 0px;
-    left: 28px;
+.sideBarIcon{
+
 }
+
+.sideBarIcon :hover{
+    -webkit-transition:background 0.2s linear; 
+    -moz-transition:background 0.2s linear; 
+    -ms-transition:background 0.2s linear; 
+    -o-transition:background 0.2s linear; 
+    transition:background 0.2s linear;
+    background-color: #6a1b9a;
+}
+
 
 /*search Bar-------------*/
 #searchBarDiv{
