--- a/homepage/assets/css/calendarStyle.css
+++ b/homepage/assets/css/calendarStyle.css
@@ -90,17 +90,22 @@
 }
 
 /*new event-----------------*/
+#newEventModal{
+  height: 80%;
+  overflow-y:scroll;
+}
+
 #newEventModal, #deleteEventModal {
   display: none;
   z-index: 20;
   padding: 25px;
   background-color: #e8f4fa;
-  box-shadow: 0px 0px 50px rgb(118, 133, 132);
-  border-radius: 15px;
-  width: 30%;
-  top: 70px;
-  left: calc(45% - 175px);
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  width: 25%;
   position: fixed;
+  top:55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   color: #427571;
 }
 
@@ -114,6 +119,7 @@
 #newEventModal form{
   display: flex;
   flex-direction: column;
+  font-size: small;
 }
 
 .inputField {
@@ -121,7 +127,7 @@
   padding: 3px; /* 內邊距減少 */
   border-radius: 5px;
   margin-top: 5px; /* 上下外邊距減少 */
-  box-shadow: 0px 0px 3px gray;
+  box-shadow: 0px 0px 2px gray;
   font-size: 14px; /* 字體大小減小，如果需要 */
   width: 95%; /* 調整寬度，如果需要 */
 }
