--- a/homepage/assets/css/calendarStyle.css
+++ b/homepage/assets/css/calendarStyle.css
@@ -20,7 +20,6 @@
   padding: 10px;
   color: #64CCC5;
   font-size: 26px;
-  font-family: sans-serif;
   display: flex;
   justify-content: space-between;
 }
@@ -168,4 +167,70 @@
   height: 100vh;
   position: fixed;
   background-color:rgba(30, 130, 133, 0.5);
+}
+
+/*event box-----*/
+#today{
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#Eventheader {
+  padding: 10px;
+  display: flex;
+  justify-content:center;
+  flex-direction: column;
+  align-items: center;
+}
+
+#Eventheader p{
+  margin: 0;
+  color:#64CCC5;
+  font-size: 26px;
+}
+
+#pickDayDisplay{
+  font-size: 20px;
+}
+
+#EventBox{
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+}
+
+.event{
+  height: 14%;
+  box-sizing: border-box;
+  background-color: #414d4b;
+  border-radius: 4px;
+  margin: 4% 2%;
+  box-shadow: 0px 0px 8px #414d4b;
+  display: flex;
+  padding: 5px;
+  align-items: center;
+}
+
+.eventTime{
+  flex-basis:28%;
+  display: flex;
+  padding: 5px;
+  flex-direction: column;
+  align-items: center;
+  font-size: 12px;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+.eventTagColor{
+  border: 2px solid #64CCC5;
+  border-radius: 4px;
+  height: 90%;
+  margin: 0 5px;
+}
+
+.eventName{
+  font-size: 18px;
+  padding: 5px;
 }
