--- a/homepage/assets/css/calendarStyle.css
+++ b/homepage/assets/css/calendarStyle.css
@@ -144,6 +144,8 @@
   background-color: #F7CDCE;
 }
 #saveButton, #closeButton {
+  margin-left: auto;
+  margin-right: auto;
   background-color: #96AEDA;
 }
 #eventText {
