delete colorpicker color

--- a/homepage/assets/css/swatchy.css
+++ b/homepage/assets/css/swatchy.css
@@ -9,7 +9,7 @@
 
 .swatchy-swatches {
     display: grid;
-    grid-template-columns: repeat(11, 24px);
+    grid-template-columns: repeat(5, 1fr);
     justify-items: center;
     grid-gap: 8px 2px;
 }
@@ -31,42 +31,4 @@
     max-width: 48px;
     border-radius: 8px;
     border: none;
-}
-
-
-
-/* From uiverse.io by @Voxybuns */
-.swatchy-button {
-    /* Variables */
-    --button_radius: 0.75em;
-    --button_color: #e8e8e8;
-    --button_outline_color: #000000;
-    font-size: 17px;
-    font-weight: bold;
-    border: none;
-    border-radius: var(--button_radius);
-    background: var(--button_outline_color);
-    padding: 0;
-}
-
-.swatchy-button-top {
-    display: block;
-    box-sizing: border-box;
-    border: 2px solid var(--button_outline_color);
-    border-radius: var(--button_radius);
-    padding: 0.75em 1.5em;
-    background: var(--button_color);
-    color: var(--button_outline_color);
-    transform: translateY(-0.2em);
-    transition: transform 0.1s ease;
-}
-
-.swatchy-button:hover .swatchy-button-top {
-    /* Pull the button upwards when hovered */
-    transform: translateY(-0.33em);
-}
-
-.swatchy-button:active .swatchy-button-top {
-    /* Push the button downwards when pressed */
-    transform: translateY(0);
 }
