--- a/homepage/assets/css/swatchy.css
+++ b/homepage/assets/css/swatchy.css
@@ -1,4 +1,7 @@
 .swatchy-element {
+    position: fixed;
+    top: 50%;
+    left: 50%;
     margin: 8px 0;
     padding: 12px;
     background: white;
