--- a/homepage/assets/css/swatchy.css
+++ b/homepage/assets/css/swatchy.css
@@ -1,18 +1,23 @@
 .swatchy-element {
     position: fixed;
-    top: 50%;
+    top: 35%;
     left: 50%;
-    margin: 8px 0;
-    padding: 12px;
+    margin: 0; /* Increased margin */
+    padding: 24px; /* Increased padding */
     background: white;
     border-radius: 8px;
-    max-width: 284px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    width: 400px; /* Increased width */
+    height: 300px; /* Increased height */
+    max-width: 100%; /* Ensure it doesn't exceed the viewport width */
+    max-height: 100%; /* Ensure it doesn't exceed the viewport height */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 4px 8px rgba(0, 0, 0, 0.1);
+    transform: translate(-50%, -50%); /* Center the element */
 }
+
 
 .swatchy-swatches {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     justify-items: center;
     grid-gap: 8px 2px;
 }
