--- a/homepage/assets/css/style.css
+++ b/homepage/assets/css/style.css
@@ -219,7 +219,7 @@ body{
   
   /* 網頁捲軸【背景】顏色 */
   ::-webkit-scrollbar-track {
-    background: #03141e;
+    background: #201f1d;
   }
   
   /* 網頁捲軸【把手】顏色 */
