update the color picker to DB

--- a/homepage/assets/css/swatchy.css
+++ b/homepage/assets/css/swatchy.css
@@ -1,13 +1,13 @@
 .swatchy-element {
     position: fixed;
-    top: 30%;
+    top: 40%;
     left: 50%;
-    margin: 0; /* Increased margin */
+    margin: 10px; /* Increased margin */
     padding: 24px; /* Increased padding */
     background: white;
     border-radius: 8px;
     width: 400px; /* Increased width */
-    height: 380px; /* Increased height */
+    height: 300px; /* Increased height */
     max-width: 100%; /* Ensure it doesn't exceed the viewport width */
     max-height: 100%; /* Ensure it doesn't exceed the viewport height */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -46,4 +46,8 @@
     bottom: 2%;
     left: 38%;
     display: block;
+}
+
+.swatchy-output {
+    text-align: center;
 }
