--- a/homepage/assets/css/calendarStyle.css
+++ b/homepage/assets/css/calendarStyle.css
@@ -99,7 +99,7 @@
   background-color: #e8f4fa;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
   position: fixed;
-  top:55%;
+  top:52%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: #427571;
@@ -249,6 +249,10 @@
   font-size: small;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
+.eventStart{
+  display: flex;
+  
+}
 
 .eventTagColor{
   width: 5px;
@@ -266,7 +270,7 @@
 /*calendar event point*/
 .eventPointDiv{
   flex-basis: 50%;
-  display: flex;
+  display: flex !important;
   margin: 0;
   align-content: center;
   flex-direction: row;
