--- a/homepage/assets/css/swatchy.css
+++ b/homepage/assets/css/swatchy.css
@@ -41,13 +41,34 @@
     border: none;
 }
 
-#colorPicker {
+#editcolorPicker {
     position: fixed;
     bottom: 2%;
     left: 38%;
     display: block;
 }
 
+.swatchy-trigger{
+    background-color: #d6e0e4;
+}
+
 .swatchy-output {
     text-align: center;
+}
+
+#classColor{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#eventColor{
+    text-align: center;
+    margin: 0px 10px;
+    width: 100%;
+    height: 35px;
+    box-shadow: 0px 0px 3px gray;
+    border: none;
+    border-radius: 5px;
+    color:#fff;
 }
