--- a/homepage/assets/css/style.css
+++ b/homepage/assets/css/style.css
@@ -10,6 +10,10 @@ body{
 	overflow-x:hidden;
 }
 
+.darkmode-layer, .darkmode-toggle {
+    z-index: 500;
+  }
+
 /*-header-------------------*/
 #header{
     position: fixed;
@@ -52,7 +56,7 @@ body{
     color: #fff;
     padding: 0 15px;
 }
-        
+
 /*button bar--------------*/
 #buttonBar{
     z-index: 0;
