--- a/homepage/assets/css/login.css
+++ b/homepage/assets/css/login.css
@@ -9,11 +9,28 @@ body{
     flex-direction: column;
     margin: 0;
     padding: 0;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
 
 #logInBox{
     width: 360px;
     z-index: 10;
+}
+
+#rememberBox{
+    display: flex;
+    align-items: baseline;
+}
+
+#rememberBox label{
+    width: 80%;
+    margin-right: 60px;
+}
+
+#rememberBox input{
+    width: 40px;
+    margin-left: 70px;
 }
 
 .form {
@@ -70,65 +87,4 @@ body{
 
 .form .signupFrom {
     display: none;
-}
-
-#logInBox.loginError{
-    animation-name: frames_error;
-    animation-duration: .5s;
-    animation-iteration-count: 1;
-}
-@keyframes frames_error{
-    0%{
-        top: 0;
-        border:solid 5px rgba(255, 0, 0, 0);
-    }
-    25%{
-        bottom: 50px;
-        border:solid 5px rgb(255, 92, 92);
-    }
-    50%{
-        top: 50px;
-        border:solid 5px rgb(255, 92, 92);
-    }
-    75%{
-        bottom: 50px;
-        border:solid 5px rgb(255, 92, 92);
-    }
-    100%{
-        top:0;
-        border:solid 5px rgb(255, 92, 92);
-    }
-}
-
-#logInBox.signupSuccess{
-    animation-name: frames_success;
-    animation-duration: .5s;
-    animation-iteration-count: 1;
-}
-
-@keyframes frames_success{
-    0%{
-        top: 0;
-        border:solid 5px rgba(0, 255, 0, 0);
-    }
-    25%{
-        bottom: 50px;
-        border:solid 5px rgb(125, 255, 92);
-    }
-    50%{
-        top: 50px;
-        border:solid 5px rgb(125, 255, 92);
-    }
-    75%{
-        bottom: 50px;
-        border:solid 5px rgb(125, 255, 92);
-    }
-    100%{
-        top:0;
-        border:solid 5px rgb(125, 255, 92);
-    }
-}
-
-.ErrorMessage{
-    color: rgb(255, 92, 92);
 }
